--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/fevicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,34 +10,92 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Vikas Patel | Designer</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <script>
+      // var navheight=$('header').outerHeight();
+      // var lastScrollTop = navheight;
+      // $(window).scroll(function(event){
+      //   var st = $(this).scrollTop();
+      //   if (st > lastScrollTop){
+      //     $("#root").addClass("port__Nav--Sticked");
+      //   } else {
+      //     $("#root").removeClass("port__Nav--Sticked");
+      //   }
+      //   lastScrollTop = st;
+      // });
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      $(window).scroll(function() {    
+        var scroll = $(window).scrollTop();
+        var navheight=$('header').outerHeight();
+        if (scroll >= navheight) {
+            $("#root").addClass("port__Nav--Sticked");
+        }
+        else{
+          $("#root").removeClass("port__Nav--Sticked");
+        }
+    });
+
+    /*Navigation*/
+    $(document).ready(function(){
+      $('.port__Menu a').on('click', function(){
+        $("body").removeClass('nav-active');
+    })
+    $('.port__Hamburger').on('click', function(){
+      $("body").toggleClass('nav-active');
+    })
+    })
+
+    /*cusrsor*/
+  
+    $(document).on("click mousemove","body",function(e){ 
+    var x = e.clientX;
+    var y = e.clientY;
+    var newposX = x - 50;
+    var newposY = y - 50; $(".cursor").css("transform","translate3d("+newposX+"px,"+newposY+"px,0px)");
+
+
+
+    });
+
+
+
+    /*Cursor Direction*/
+//     var last_position = {},
+//     $cursor       = $('.cursor');
+//     $(document).on('mousemove', function (event) {
+//     if (typeof(last_position.x) != 'undefined') {
+//         var deltaX = last_position.x - event.offsetX,
+//             deltaY = last_position.y - event.offsetY;
+//         if (Math.abs(deltaX) > Math.abs(deltaY) && deltaX > 0) {
+//             //left
+//             $cursor.addClass('cursor-left');
+//         } else if (Math.abs(deltaX) > Math.abs(deltaY) && deltaX < 0) {
+//             //right
+//             $cursor.addClass('cursor-right');
+//         } else if (Math.abs(deltaY) > Math.abs(deltaX) && deltaY > 0) {
+//             //up
+//             $cursor.addClass('cursor-up');
+//         } else if (Math.abs(deltaY) > Math.abs(deltaX) && deltaY < 0) {
+//             //down
+//             $cursor.addClass('cursor-down');
+//         }
+//         if ($cursor.children().length > 4) {
+//             $cursor.children().eq(0).remove();
+//         }
+//     }
+//     last_position = {
+//         x : event.offsetX,
+//         y : event.offsetY
+//     };
+// });
+    </script>
   </body>
 </html>
